flaskr/static/css/common/main.css
/** LAYOUT *******************************************************************/

.container {
    margin-top: 60px;
    margin-bottom: 2em;
}


/** NAVBAR *******************************************************************/

.navbar-inverse {
    background-color: #0e6191dd;
    border-color: #080808;
}

.navbar-inverse .navbar-nav > li > a {
    color: #d5d8d8;
    font-weight: bold;
}

.navbar-inverse .navbar-brand {
    color: #d5d8d8;
}

.navbar-toggler-icon {
        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}


/** HERO *********************************************************************/

div.jumbotron {
    background-color: #eeeeeebb;
}

#image-background {
    position: absolute;
    top: -2rem;
    z-index: -1;
    width: 100%;
    height: 22.2rem;
    background-image: url('../../public/img/plane-with-chemtrails.jpg');
    background-size: cover;
    background-repeat: no-repeat;
}


/** FOOTER *******************************************************************/

footer.page-footer {
    padding: 4rem 5rem;
    color: #fff;
    background-color: #3980af;
    height: 13rem;
}

footer.page-footer a {
    color: #fff;
}


/** FORM *********************************************************************/

span.required-asterisk {
    color: #901524;
}

